--- a/src/assets/page.css
+++ b/src/assets/page.css
@@ -46,7 +46,8 @@
 .product-unavailable-container .btn-available-next {
   margin: 20px auto;
   border: 2px solid #000;
-  width: 50%;
+  border-radius: 4px;
+  width: 60%;
   height: 36px;
   color: #000;
   font-weight: 600;
@@ -181,6 +182,7 @@
 .btn-buy {
   color: var(--white);
   border: none;
+  border-radius: 4px;
   font-weight: bold;
   display: inline-block;
   width: 250px;
@@ -192,6 +194,7 @@
 .btn-next {
   font-weight: bold;
   background-color: var(--white);
+  border-radius: 4px;
   display: inline-block;
   width: 250px;
   height: 42px;
