--- a/src/assets/page.css
+++ b/src/assets/page.css
@@ -331,3 +331,134 @@
     background-position: 468px 0;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .contain-product {
+    width: 90%;
+    height: 99%;
+    padding: 20px;
+  }
+
+  .content {
+    width: 100%;
+    display: inline;
+  }
+
+  .img-product {
+    width: 88%;
+    height: 250px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .img-product img {
+    margin-bottom: 20px;
+    width: 50%;
+  }
+
+  .content .title {
+    margin-top: 200px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 34px;
+  }
+
+  .content .price {
+    font-size: 25px;
+    font-weight: 600;
+  }
+
+  .content .wrapper2 {
+    padding-top: 16px;
+    border-top: 1px solid var(--gray);
+    width: 89%;
+    position: fixed;
+    margin-top: 25px;
+  }
+
+  .btn {
+    margin-top: 16px;
+    width: 100%;
+  }
+
+  .btn-buy {
+    color: var(--white);
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    display: inline-block;
+    width: 100%;
+    height: 40px;
+    padding: 0.5em 3em;
+    margin: 0 1em 0.6em 0;
+  }
+
+  .btn-next {
+    font-weight: bold;
+    background-color: var(--white);
+    border-radius: 4px;
+    display: inline-block;
+    width: 100%;
+    height: 40px;
+    padding: 0.5em 3em;
+    margin: 0 0.3em 0.3em 0;
+    box-sizing: border-box;
+    cursor: pointer;
+  }
+
+  .content .sub-title {
+    width: 100%;
+    font-size: 13px;
+  }
+
+  .content .desc {
+    font-size: 15px;
+  }
+
+  .content .desc {
+    width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+  }
+
+  .overlay > img {
+    width: 100%;
+  }
+
+  .skeleton {
+    width: 100%;
+    height: 100%;
+    display: flow-root;
+  }
+
+  .skeleton-left {
+    height: 20%;
+  }
+
+  .skeleton-right {
+    height: 100%;
+    margin-top: 87px;
+  }
+
+  .skeleton .square {
+    width: 105%;
+    height: 150%;
+  }
+
+  .h250 {
+    height: 250px !important;
+  }
+}
+
+/*Coming Soon untuk ukuran layar menengah */
+@media screen and (min-width: 601px) and (max-width: 900px) {
+
+}
+
+/*Coming Soon CSS untuk ukuran layar besar */
+@media screen and (min-width: 901px) {
+  
+}
